--- a/package.json
+++ b/package.json
@@ -9,10 +9,28 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~48.0.4",
-    "expo-status-bar": "~1.4.4",
-    "react": "18.2.0",
-    "react-native": "0.71.3"
+    "@expo/webpack-config": "^18.0.1",
+    "@react-native-community/masked-view": "^0.1.11",
+    "@react-navigation/native": "^6.1.6",
+    "@react-navigation/native-stack": "^6.9.12",
+    "@rneui/base": "^4.0.0-rc.7",
+    "@rneui/themed": "^4.0.0-rc.7",
+    "@types/react": "^18.0.28",
+    "@types/react-dom": "^18.0.11",
+    "expo": "~48.0.5",
+    "expo-status-bar": "^1.4.4",
+    "expo-updates": "~0.16.3",
+    "fireauth": "^1.0.4",
+    "firebase": "^9.17.2",
+    "firestore": "^1.1.6",
+    "pressable": "^0.1.0",
+    "react": "^18.2.0",
+    "react-native": "0.71.3",
+    "react-native-elements": "^3.4.3",
+    "react-native-gesture-handler": "~2.9.0",
+    "react-native-reanimated": "~2.14.4",
+    "react-native-safe-area-context": "4.5.0",
+    "react-native-screens": "~3.20.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
